<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gists.GistActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_gist_filename"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:textAppearance="@android:style/TextAppearance.Material.Headline"
                android:textColor="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@tools:sample/cities" />

            <TextView
                android:id="@+id/text_gist_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textAppearance="@android:style/TextAppearance.Material.Subhead"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_gist_filename"
                tools:text="@tools:sample/lorem" />

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_gist_description" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/view_gist_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/divider1">

                <ImageView
                    android:id="@+id/image_gist_author_avatar"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/item_gist_avatar_desc"
                    android:src="@drawable/ic_avatar_placeholder"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/avatars"/>

                <TextView
                    android:id="@+id/text_gist_author"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textAppearance="@android:style/TextAppearance.Material.Body1"
                    android:gravity="bottom"

                    app:layout_constraintStart_toEndOf="@+id/image_gist_author_avatar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/image_gist_author_avatar"
                    app:layout_constraintBottom_toTopOf="@id/text_gist_author_label"
                    app:layout_constraintVertical_chainStyle="packed"
                    tools:text="@tools:sample/full_names" />

                <TextView
                    android:id="@+id/text_gist_author_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textAppearance="@android:style/TextAppearance.Material.Caption"
                    android:text="@string/label_gist_author"

                    app:layout_constraintStart_toEndOf="@+id/image_gist_author_avatar"
                    app:layout_constraintTop_toBottomOf="@id/text_gist_author"
                    app:layout_constraintBottom_toBottomOf="@+id/image_gist_author_avatar"
                    app:layout_constraintVertical_chainStyle="packed" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/divider_height"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/text_gist_author"
                    app:layout_constraintTop_toBottomOf="@+id/text_gist_author_label" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/view_gist_files"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/info_row_start_margin"
                app:layout_constraintTop_toBottomOf="@id/view_gist_author">

                <TextView
                    android:id="@+id/text_gist_files_count"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textAppearance="@android:style/TextAppearance.Material.Body1"
                    android:textColor="@color/colorAccent"
                    android:gravity="bottom"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/text_gist_files_label"
                    app:layout_constraintVertical_chainStyle="packed"
                    tools:text="42" />

                <TextView
                    android:id="@+id/text_gist_files_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textAppearance="@android:style/TextAppearance.Material.Caption"
                    android:text="@string/label_gist_filecount"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_gist_files_count"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <View
                    android:id="@+id/divider7"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/divider_height"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_gist_files_label" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/view_gist_created"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/info_row_start_margin"
                app:layout_constraintTop_toBottomOf="@id/view_gist_files">

                <TextView
                    android:id="@+id/text_gist_created"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textAppearance="@android:style/TextAppearance.Material.Body1"
                    android:gravity="bottom"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/text_gist_created_label"
                    app:layout_constraintVertical_chainStyle="packed"
                    tools:text="@tools:sample/date/hhmmss" />

                <TextView
                    android:id="@+id/text_gist_created_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textAppearance="@android:style/TextAppearance.Material.Caption"
                    android:text="@string/label_gist_createdat"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_gist_created"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <View
                    android:id="@+id/divider3"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/divider_height"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_gist_created_label" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/view_gist_updated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/info_row_start_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                app:layout_constraintTop_toBottomOf="@id/view_gist_created">

                <TextView
                    android:id="@+id/text_gist_updated"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textAppearance="@android:style/TextAppearance.Material.Body1"
                    android:gravity="bottom"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/text_gist_updated_label"
                    app:layout_constraintVertical_chainStyle="packed"
                    tools:text="@tools:sample/date/hhmmss" />

                <TextView
                    android:id="@+id/text_gist_updated_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textAppearance="@android:style/TextAppearance.Material.Caption"
                    android:text="@string/label_gist_lastupdated"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_gist_updated"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/divider4"
                android:layout_width="0dp"
                android:layout_height="@dimen/divider_height"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_gist_updated" />

            <TextView
                android:id="@+id/text_gist_comments_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/label_gist_comments"
                android:textAppearance="@android:style/TextAppearance.Material.Body2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider4" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/view_gist_comments_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_gist_comments_label">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_gist_comment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_gist_comment_hint"
                        android:inputType="textCapSentences"
                        android:paddingEnd="48dp"
                        android:imeOptions="actionDone"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_gist_comments_create"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:enabled="false"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    app:icon="@drawable/ic_send"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_gist_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_comment"
                tools:itemCount="5"
                app:layout_constraintTop_toBottomOf="@id/view_gist_comments_create"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progress_gist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:visibility="gone" />

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|snap">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_gist_top"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_close"
                app:layout_collapseMode="parallax"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>